--- a/Frontend/assets/css/style.css
+++ b/Frontend/assets/css/style.css
@@ -14,15 +14,69 @@ body {
 }
 
 
-.nav-item{
+
+
+
+/* Estilos del modal */
+.modal {
+    display: none;
+    /* Oculta el modal por defecto */
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgb(0, 0, 0);
+    /* Fondo negro */
+    background-color: rgba(0, 0, 0, 0.4);
+    /* Fondo negro con opacidad */
+}
+
+/* Contenido del modal */
+.modal-content {
+    background-color: #fefefe;
+    margin: 15% auto;
+    /* Ajuste del margen para centrar el modal */
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%;
+    /* Ancho del modal */
+}
+
+/* El botón de cerrar */
+.close {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+/* Cambia el color del botón de cerrar cuando el mouse pasa sobre él */
+.close:hover,
+.close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+
+
+
+
+
+
+
+.nav-item {
     font-size: 18px;
 }
 
-.dropdown-item{
+.dropdown-item {
     font-size: 17px;
 }
 
-#navbarDropdown{
+#navbarDropdown {
     font-size: 20px;
 }
 
@@ -41,7 +95,7 @@ body.dark-mode {
     color: white;
 }
 
-#NAB{
+#NAB {
     color: black;
 }
 
@@ -110,7 +164,7 @@ body.dark-mode footer {
     /* Color del texto en el footer para el modo oscuro */
 }
 
-.dark{
+.dark {
     border-radius: 8%;
 }
 
